fixup! payg: Add extra strings and update style for text in the unlock dialog
We need to put a limit to the maximum width of the box holding the unlocking
prompt box and make the text in the two text lines at the bottom wrappable,
or we will quickly see how the UI gets messed up once we start showing
translated or image-specific lines in there.

https://phabricator.endlessm.com/T21864

--- a/data/theme/gnome-shell.css
+++ b/data/theme/gnome-shell.css
@@ -2777,7 +2777,8 @@ stage {
       margin: 24px; }
     .unlock-dialog-payg .unlock-dialog-payg-layout .unlock-dialog-payg-promptbox {
       spacing: 6px;
-      min-width: 370px; }
+      min-width: 370px;
+      max-width: 370px; }
     .unlock-dialog-payg .unlock-dialog-payg-layout .unlock-dialog-payg-label {
       color: #bebeb6;
       font-size: 110%;
